# Tisp-Language

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  grammar.md
include/ast/: astbase.hpp  astvisitor.hpp  exprbase.hpp  exprs.hpp  exprvisitor.hpp  stmtbase.hpp  stmts.hpp  stmtvisitor.hpp
include/frontend/: info.hpp  lexer.hpp  parser.hpp  token.hpp
include/utils/: astprinter.hpp
src/: CMakeLists.txt  main.cpp
src/ast/: CMakeLists.txt  exprs.cpp  stmts.cpp
src/frontend/: CMakeLists.txt  info.cpp  lexer.cpp  parser.cpp  token.cpp
src/utils/: CMakeLists.txt  astprinter.cpp
testprogs/: test00.tisp  test01.tisp  test02.tisp  test03.tisp
